--- a/.github/workflows/cypress-complete-project.yml
+++ b/.github/workflows/cypress-complete-project.yml
@@ -1,16 +1,16 @@
-name: Cypress Tests - Complete Project
+name: Cypress Tests - Taly
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'complete-project/**.js'
-      - 'complete-project/**.json'
-      - 'complete-project/**.yml'
+      - 'taly-automation/**.js'
+      - 'taly-automation/**.json'
+      - 'taly-automation/**.yml'
 
 jobs:
-  complete-project-tests:
+  taly-automation-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,8 +24,8 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./complete-project
+        working-directory: ./taly-automation
 
       - name: Run Cypress tests
         run: npm run cypress:headless
-        working-directory: ./complete-project
+        working-directory: ./taly-automation
