--- a/taly-automation/package.json
+++ b/taly-automation/package.json
@@ -11,10 +11,13 @@
   "author": "erickwendel",
   "license": "ISC",
   "type": "module",
-  "engines": {
-    "node": "v20.12.1"
-  },
   "devDependencies": {
-    "cypress": "^13.7.2"
+    "cypress": "^13.7.2",
+    "cypress-xpath": "^2.0.1"
+  },
+  "dependencies": {
+    "axios": "^1.7.3",
+    "crypto-js": "^4.2.0",
+    "uuid": "^10.0.0"
   }
 }
