--- a/.github/workflows/cypress-taly-automation.yml
+++ b/.github/workflows/cypress-taly-automation.yml
@@ -1,16 +1,16 @@
-name: Cypress Tests - In Class Project
+name: Cypress Tests - Taly
 
 on:
   push:
     branches:
       - main
     paths:
-      - 'in-class-project/**.js'
-      - 'in-class-project/**.json'
-      - 'in-class-project/**.yml'
+      - 'taly-automation/**.js'
+      - 'taly-automation/**.json'
+      - 'taly-automation/**.yml'
 
 jobs:
-  in-class-project-tests:
+  taly-automation-tests:
     runs-on: ubuntu-latest
 
     steps:
@@ -24,8 +24,8 @@ jobs:
 
       - name: Install dependencies
         run: npm install
-        working-directory: ./in-class-project
+        working-directory: ./taly-automation
 
       - name: Run Cypress tests
         run: npm run cypress:headless
-        working-directory: ./in-class-project
+        working-directory: ./taly-automation
