--- a/taly-automation/package.json
+++ b/taly-automation/package.json
@@ -8,16 +8,13 @@
     "cypress:headless": "npx cypress run --browser electron"
   },
   "keywords": [],
-  "author": "erickwendel",
+  "author": "Emanoel Portugal",
   "license": "ISC",
   "type": "module",
   "devDependencies": {
-    "cypress": "^13.7.2",
-    "cypress-xpath": "^2.0.1"
+    "cypress": "^13.7.2"
   },
   "dependencies": {
-    "axios": "^1.7.3",
-    "crypto-js": "^4.2.0",
-    "uuid": "^10.0.0"
+    "crypto-js": "^4.2.0"
   }
 }
