Package.js editing

--- a/taly-automation/package.json
+++ b/taly-automation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vanilla-js-web-app-example",
+  "name": "taly-automation-cypress",
   "version": "0.0.1",
   "description": "",
   "main": "index.js",
