Changing paths in .yml file

--- a/.github/workflows/cypress-taly-automation.yml
+++ b/.github/workflows/cypress-taly-automation.yml
@@ -5,9 +5,9 @@ on:
     branches:
       - main
     paths:
-      - 'taly-automation/**.js'
-      - 'taly-automation/**.json'
-      - 'taly-automation/**.yml'
+      - 'src/**.tsx'
+      - 'src/**.json'
+      - 'src/**.yml' 
 
 jobs:
   taly-automation-tests:
